<resources>
    <string name="app_name">CST2335-Final-Project</string>
    <string name="action_settings">Settings</string>
    <string name="btn_news">News API headlines</string>

    <string name="news_search">News Search</string>
    <string name="news_saved">News Saved</string>
    <string name="news_view_in_browser">Browser</string>
    <string name="news_save">Save</string>
    <string name="news_delete">Delete</string>
    <string name="news_error_toast">Please enter the search topic</string>
    <string name="news_wait">Please wait</string>
    <string name="news_failed_save">Failed to save news</string>
    <string name="news_failed_delete">Failed to delete news</string>
    <string name="news_success_save">Article saved</string>
    <string name="news_success_delete">Article deleted</string>
    <string name="news_hint">Enter the news heading</string>
    <string name="help_to_use">How to use</string>
    <string name="help_ok">OK!</string>
    <string name="news_author">Author</string>
    <string name="news_version">Version 1</string>
    <string name="help_1">In Search screen enter a topic that you wants to search and enter.</string>
    <string name="help_2">Click a news to display detail.</string>
    <string name="help_3">On the detail news screen, click on save to save the article to database or
        click delete button to delete the saved article</string>
    <string name="help_4">Click on save button to saved articles.</string>
    <string name="help">Help</string>


</resources>
